7523
This now reports:

{code}
scala> decl
<console>:11: error: macro has not been expanded
              decl
              ^
{code}
